<resources>
    <string name="app_name">MyBestYouTube</string>
    <string name="add_youtube_video">Ajouter une vidéo</string>
    <string name="add_playlist">Ajouter une playlist</string>
    <string name="empty_list">Vider la liste</string>
    <string name="empty_list_confirmation">Êtes-vous sûr(e) de vouloir vider la liste ? (cette action est irréversible)</string>
    <string name="empty_list_success">Liste vidée</string>
    <string name="favorite">Favori</string>
    <string name="category">Catégorie</string>
    <string name="edit">Éditer</string>
    <string name="favorite_add">ajouté aux favoris.</string>
    <string name="favorite_remove">retiré des favoris.</string>
    <string name="launch_video">Voir la vidéo</string>
    <string name="video_updated">Vidéo mise à jour</string>
    <string name="placeholder_description">Description</string>
    <string name="placeholder_url">Id ou url de la vidéo</string>
    <string name="placeholder_titre">Titre de la vidéo</string>
    <string name="btn_add">Ajouter</string>
    <string name="btn_cancel">Annuler</string>
    <string name="update">Mettre à jour</string>
    <string name="delete_title">Supprimer</string>
    <string name="delete_content">Êtes-vous sûr(e) de vouloir supprimer cette entrée de la liste ?</string>
    <string name="delete_verb">supprimé.</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="menu1">Voir les miniatures</string>
    <string name="menu2">Éditer</string>
    <string name="btn_get_video_info">Récupérer les informations</string>
    <string name="add_consigne_1">Entrez l\'identifiant ou l\'url de la vidéo YouTube que vous voulez ajouter, et cliquez sur "Récupérer les informations" pour retrouver automatiquement le titre et la description.</string>
    <string name="add_consigne_2">Sélectionnez une catégorie :</string>
    <string name="add_consigne_playlist">Entrez l\'identifiant ou l\'url de la playlist Youtube que vous souhaitez importer et cliquez sur "Ajouter la playlist" (max 50 résultats)</string>
    <string name="hint_add_playlist">Id ou url de la playlist</string>
    <string name="btn_add_playlist">Ajouter la playlist</string>
    <string name="cant_launch">L\'application Youtube n\'est pas installée</string>
    <string name="no_video_found">Pas de vidéo trouvé</string>
    <string name="no_youtube_id_found">Video ID Youtube non trouvé</string>
    <string name="fill_all_fields">Veuillez remplir tous le champs</string>
    <string-array name="categories">
        <item>Musique</item>
        <item>Jeux vidéo</item>
        <item>Cinéma</item>
        <item>Comédie</item>
        <item>Informatique</item>
        <item>Culture</item>
    </string-array>
</resources>